--- a/data/intern-exp/2020-01.md
+++ b/data/intern-exp/2020-01.md
@@ -29,4 +29,4 @@ Start early, join the organization’s communication channel from January itself
 
 # 8) What is the best way to contact you ?
 
-You can contact me at my email, vedantparanjape160201@gmail.com
+You can contact me at my email, [vedantparanjape160201@gmail.com](email:vedantparanjape160201@gmail.com)
